- worked on the prompts and shortened the methods options to 3 only
- may use dfs, bfs and bipartite